[package]
name = "webhook-slash"
version = "0.0.0"
authors = ["Twilight Contributors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twilight-model = { version = "0.5.0" }
tracing-subscriber = "0.2"
hex = "0.4"
once_cell = "1.4.1"

[dependencies.ed25519-dalek]
version = "1"
